Mon Nov  7 00:06:12 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/yaml.rb: removed :nodoc: to generate Kernel doc. [ruby-core:6324]

Sun Nov  6 23:39:13 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (Iconv::BrokenLibrary): exception when detected a
	  bug of underlying library.

Sun Nov  6 21:43:22 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tk/stubs.c (ruby_tcl_create_ip_and_stubs_init): should touch
	  interpreter after initialization is done. [ruby-dev:27638]

Sun Nov  6 20:13:27 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_readlink): readlink(2) on AIX fails with ERANGE if
	  buffer size is less than required.  fixed: [ruby-dev:27634]

Sat Nov  5 13:42:50 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, cygwin/GNUmakefile.in (mingw): use def file to alias
	  symbols.  [ruby-dev:27532]

	* bcc32/mkexports.rb, win32/mkexports.rb: make aliases in DLL.

	* win32/win32.c, win32/win32.h: replace symbols only when RUBY_EXPORT
	  is defined.

Thu Nov  3 07:57:39 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/open-uri.rb (open_loop): find_proxy should return nil when
	  proxy does not exist. [ruby-dev:27630]

Wed Nov  2 20:25:28 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: ext/tk/extconf.rb: change the check parameter
	  for Win32.

Wed Nov  2 19:03:06 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c (ip_rbUpdateObjCmd, ip_rb_threadUpdateObjCmd):
	  passed improper flags to DoOneEvent().

	* ext/tk/tkutil/tkutil.c: use rb_obj_respond_to() instead of
	  rb_respond_to().

Tue Nov  1 14:20:11 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_call_super): should call method_missing if super is
	  called from Kernel method.

	* eval.c (exec_under): frame during eval should preserve external
	  information.

Tue Nov 01 10:48:49 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/extconf.rb: should check ERR_peek_last_error().